--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
   "name": "node-js-getting-started",
-  "version": "0.2.6",
+  "version": "0.2.5",
   "description": "A sample Node.js app using Express 4",
   "engines": {
-    "node": "6.11.1"
+    "node": "5.9.1"
   },
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "node test.js"
+    "start": "node index.js"
   },
   "dependencies": {
-    "ejs": "2.5.6",
-    "express": "4.15.2"
-  },
-  "devDependencies": {
-    "request": "^2.81.0",
-    "tape": "^4.7.0"
+    "ejs": "2.4.1",
+    "express": "^4.13.3"
   },
   "repository": {
     "type": "git",
